--- a/rio-canvas/package.json
+++ b/rio-canvas/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "license": "MIT",
   "author": "ssg",
+  "engines": {
+    "node": ">=16.x <17",
+    "npm": ">=8.1.x"
+  },
   "scripts": {
     "webpack:prod": "webpack --config ./config/webpack.config.prod.js",
     "server": "node ./server",
@@ -46,7 +50,7 @@
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "image-webpack-loader": "4.6.0",
-    "node-sass": "4.11.0",
+    "node-sass": "^6.0.1",
     "postcss-loader": "2.1.2",
     "react-hot-loader": "3.0.0-beta.2",
     "sass-loader": "6.0.7",
